# pollock

./: pyproject.toml  run_generate.py  run_train.py
examples/: bench_llama_7b.py  config_tiny_llama.py  config_tiny_llama.yaml
examples/mamba/: README.md  config.py  config_mamba.yaml  create_config_mamba.py  mamba.py  train_mamba.py  trainer.py
examples/moe/: README.md  config_llamoe.py  config_llamoe.yaml  llamoe.py  moe.py  train_moe.py
src/pollock/: dataloader.py  distributed.py  helpers.py  logging.py  random.py  sanity_checks.py  trainer.py  utils.py
src/pollock/config/: __init__.py  config.py  lighteval_config.py  models_config.py  parallelism_config.py  utils_config.py
src/pollock/generation/: decode.py  sampler.py
src/pollock/models/: __init__.py  base.py  llama.py
src/pollock/nn/: activations.py
src/pollock/optim/: __init__.py  clip_grads.py  gradient_accumulator.py  inherit_from_other_optimizer.py  named_optimizer.py  optimizer_from_gradient_accumulator.py  zero.py
src/pollock/parallel/: __init__.py  context.py  parameters.py  utils.py  (+2 more)
tests/: test_checkpointing.py  test_clip_grads.py  test_data_parallel.py  test_distributed.py  test_p2p.py  test_parameter.py  test_parameters_accumulate_gradient_in_fp32.py  test_pipeline_parallel.py  test_random_state.py  test_serialize.py  test_tensor_parallel.py  test_tie_weights.py  test_zero.py
tests/fp8/: test_fp8_parameter.py  test_linear.py  test_tensor.py
tests/helpers/: distributed_tensor.py  dummy.py  exception.py  utils.py
tests/kernels/: run_layer_norm_convergence.py  test_layer_norm.py
(+18 files in other folders)
